--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,11 +15,10 @@ phases:
       # account-manager-db-client
       - cd apps/account-manager-db-client
       - pip install -r requirements.prod.txt -t deps
-      - ls -alh deps
-      # - mkdir build
-      # - cp -R ${VENV_PATH}/lib/python3.*/site-packages/* build/
-      # - cp -R account_manager_db_client/ build/
-      # - aws cloudformation package --template-file apps/account-manager-db-client/stacks/sandbox-administrator-account/account-manager-db-client.yml --s3-bucket $ARTIFACTS_BUCKET --s3-prefix artifacts/aws-sandbox-accounts/apps/account-manager-db-client --output-template-file apps/account-manager-db-client/stacks/sandbox-administrator-account/account-manager-db-client.yml
+      - mkdir build
+      - cp -R deps/* build/
+      - cp -R account_manager_db_client/ build/
+      - aws cloudformation package --template-file apps/account-manager-db-client/stacks/sandbox-administrator-account/account-manager-db-client.yml --s3-bucket $ARTIFACTS_BUCKET --s3-prefix artifacts/aws-sandbox-accounts/apps/account-manager-db-client --output-template-file apps/account-manager-db-client/stacks/sandbox-administrator-account/account-manager-db-client.yml
       - cd ..
 artifacts:
   files: "**/*"
