--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,12 +7,11 @@ env:
     AWS_SESSION_TOKEN: testing
     AWS_SECURITY_TOKEN: testing
 phases:
-  install:
-    runtime-versions:
-      python: 3.12
   build:
     commands:
       # account-manager-db-client
+      - python3 --version
+      - python3.11 --version
       - cd apps/account-manager-db-client
       - pip install -r requirements.prod.txt -t deps
       - mkdir build
