--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,6 +15,7 @@ phases:
       - mkdir build
       - cp -R deps/* build/
       - cp -R account_manager_db_client/ build/
+      - echo "$ARTIFACTS_BUCKET"
       - aws cloudformation package --template-file stacks/sandbox-administrator-account/account-manager-db-client.yml --s3-bucket $ARTIFACTS_BUCKET --s3-prefix artifacts/aws-sandbox-accounts/apps/account-manager-db-client --output-template-file stacks/sandbox-administrator-account/account-manager-db-client.yml
       - cd ..
 artifacts:
