--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,21 +1,15 @@
 version: 0.2
 
-env:
-  variables:
-    AWS_ACCESS_KEY_ID: testing
-    AWS_SECRET_ACCESS_KEY: testing
-    AWS_SESSION_TOKEN: testing
-    AWS_SECURITY_TOKEN: testing
 phases:
   build:
     commands:
       # account-manager-db-client
       - cd apps/account-manager-db-client
+      # TODO: run tests (will need to handle installing dev dependencies)
       - pip install -r requirements.prod.txt -t deps
       - mkdir build
       - cp -R deps/* build/
       - cp -R account_manager_db_client/ build/
-      - echo "$ARTIFACTS_BUCKET"
       - aws cloudformation package --template-file stacks/sandbox-administrator-account/account-manager-db-client.yml --s3-bucket $ARTIFACTS_BUCKET --s3-prefix artifacts/aws-sandbox-accounts/apps/account-manager-db-client --output-template-file stacks/sandbox-administrator-account/account-manager-db-client.yml
       - cd ..
 artifacts:
