add script to seed db

--- a/tools/db-seeder/Makefile
+++ b/tools/db-seeder/Makefile
@@ -1,5 +1,8 @@
 install:
 	poetry install
 
-run:
-	poetry run python -m db_seeder.main
+test_db:
+	poetry run python -m db_seeder.main --table-name test-aws-sandbox-accounts-account-pool
+
+live_db:
+	poetry run python -m db_seeder.main --table-name live-aws-sandbox-accounts-account-pool
