--- a/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
+++ b/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
@@ -114,6 +114,7 @@ Resources:
                   action: mark_as_initial
                   params:
                     account_id: "905418121097"
+              OutputPath: $.Payload
 
             # MarkAccountAsInitial:
             #   Type: Task
