add missing perm

--- a/apps/account-manager-db-client/stacks/sandbox-administrator-account/account-manager-db-client.yml
+++ b/apps/account-manager-db-client/stacks/sandbox-administrator-account/account-manager-db-client.yml
@@ -29,7 +29,7 @@ Resources:
             Statement:
                 - Effect: Allow
                   Action:
-                    - dynamodb:query
+                    - dynamodb:BatchGetItem
                     - dynamodb:PutItem
                     - dynamodb:UpdateItem
                   Resource:
