--- a/apps/account-manager-db-client/pyproject.toml
+++ b/apps/account-manager-db-client/pyproject.toml
@@ -11,6 +11,9 @@ aws-lambda-powertools = {extras = ["tracer"], version = "^2.3.1"}
 pylint = "^3.2.4"
 boto3 = "^1.34.139"
 
+[tool.poetry.group.dev.dependencies]
+inquirer = "^3.3.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
