--- a/apps/account-manager-db-client/stacks/sandbox-administrator-account/account-manager-db-client.yml
+++ b/apps/account-manager-db-client/stacks/sandbox-administrator-account/account-manager-db-client.yml
@@ -29,6 +29,7 @@ Resources:
             Statement:
                 - Effect: Allow
                   Action:
+                    - dynamodb:GetItem
                     - dynamodb:BatchGetItem
                     - dynamodb:PutItem
                     - dynamodb:UpdateItem
