--- a/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
+++ b/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
@@ -116,7 +116,7 @@ Resources:
                 FunctionName: !Sub "${Environment}-aws-sandbox-accounts-account-manager-db-client"
                 Payload:
                   action: fetch_dirty
-              ResultPath: null
+              OutputPath: $.Payload
             # FetchAccounts:
             #   Type: Task
             #   Resource: arn:aws:states:::aws-sdk:dynamodb:query
