--- a/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
+++ b/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
@@ -119,7 +119,7 @@ Resources:
               Type: Map
               End: true
               ItemSelector:
-                account_id.$: $$.Map.Item.Value.sk.S
+                account_id.$: $$.Map.Item.Value
               ItemProcessor:
                 ProcessorConfig:
                   Mode: INLINE
