use lambda for aws nuke

--- a/apps/account-manager/buildspec.yml
+++ b/apps/account-manager/buildspec.yml
@@ -10,7 +10,7 @@ phases:
       - curl --location "https://github.com/rebuy-de/aws-nuke/releases/download/v2.25.0/aws-nuke-v2.25.0-linux-amd64.tar.gz" -o aws-nuke.tar.gz
       - tar -xvf aws-nuke.tar.gz
       - echo "running aws-nuke against $ACCOUNT_ID"
-      - make install_poetry
-      - make install
-      - make nuke-config
-      - ./aws-nuke-v2.25.0-linux-amd64 --no-dry-run --config aws-nuke.yml --assume-role-arn "arn:aws:iam::$ACCOUNT_ID:role/aws-sandbox-accounts-aws-nuke" --force --force-sleep 3
+      - # TODO: validate against list of known sandbox accounts, either here or in the step function itself
+      - sed 's/REPLACE_ME/$ACCOUNT_ID/g' aws-nuke.template.yml > aws-nuke.yml
+      - cat aws-nuke.yml
+      # - ./aws-nuke-v2.25.0-linux-amd64 --no-dry-run --config aws-nuke.yml --assume-role-arn "arn:aws:iam::$ACCOUNT_ID:role/aws-sandbox-accounts-aws-nuke" --force --force-sleep 3
