--- a/apps/account-manager/buildspec.yml
+++ b/apps/account-manager/buildspec.yml
@@ -11,6 +11,6 @@ phases:
       - tar -xvf aws-nuke.tar.gz
       - echo "running aws-nuke against $ACCOUNT_ID"
       - # TODO: validate against list of known sandbox accounts, either here or in the step function itself
-      - sed 's/REPLACE_ME/$ACCOUNT_ID/g' aws-nuke.template.yml > aws-nuke.yml
+      - sed 's/REPLACE_ME/"$ACCOUNT_ID"/g' aws-nuke.template.yml > aws-nuke.yml
       - cat aws-nuke.yml
       # - ./aws-nuke-v2.25.0-linux-amd64 --no-dry-run --config aws-nuke.yml --assume-role-arn "arn:aws:iam::$ACCOUNT_ID:role/aws-sandbox-accounts-aws-nuke" --force --force-sleep 3
