--- a/ci/codepipeline.yml
+++ b/ci/codepipeline.yml
@@ -141,6 +141,22 @@ Resources:
               InputArtifacts:
                 - Name: BuiltSource
               RunOrder: 1
+              Name: Account-Cleaner
+              Configuration:
+                ActionMode: REPLACE_ON_FAILURE
+                Capabilities: CAPABILITY_NAMED_IAM,CAPABILITY_AUTO_EXPAND
+                StackName: test-aws-sandbox-accounts-account-cleaner
+                RoleArn: !ImportValue ci-infrastructure-codepipeline-base-cloudformation-iam-role
+                TemplatePath: BuiltSource::apps/account-cleaner/stacks/sandbox-administrator-account/account-cleaner.yml
+                TemplateConfiguration: BuiltSource::apps/account-cleaner/stacks/sandbox-administrator-account/parameters/account-cleaner/test.json
+            - ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Version: "1"
+                Provider: CloudFormation
+              InputArtifacts:
+                - Name: BuiltSource
+              RunOrder: 1
               Name: Account-Manager
               Configuration:
                 ActionMode: REPLACE_ON_FAILURE
@@ -185,6 +201,22 @@ Resources:
                 TemplateConfiguration: BuiltSource::common-resources/sandbox-administrator-account/pool-store/parameters/live.json
         - Name: Deploy-Apps-To-Live
           Actions:
+            - ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Version: "1"
+                Provider: CloudFormation
+              InputArtifacts:
+                - Name: BuiltSource
+              RunOrder: 1
+              Name: Account-Cleaner
+              Configuration:
+                ActionMode: REPLACE_ON_FAILURE
+                Capabilities: CAPABILITY_NAMED_IAM,CAPABILITY_AUTO_EXPAND
+                StackName: live-aws-sandbox-accounts-account-cleaner
+                RoleArn: !ImportValue ci-infrastructure-codepipeline-base-cloudformation-iam-role
+                TemplatePath: BuiltSource::apps/account-cleaner/stacks/sandbox-administrator-account/account-cleaner.yml
+                TemplateConfiguration: BuiltSource::apps/account-cleaner/stacks/sandbox-administrator-account/parameters/account-cleaner/live.json
             - ActionTypeId:
                 Category: Deploy
                 Owner: AWS
