--- a/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
+++ b/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
@@ -30,6 +30,25 @@ Resources:
                   - lambda:InvokeFunction
                   Resource:
                   - !Sub "arn:${AWS::Partition}:lambda:${AWS::Region}:${AWS::AccountId}:function:${Environment}-aws-sandbox-accounts-account-manager-db-client"
+                - Effect: Allow
+                  Action:
+                  - states:Describe*
+                  - states:Get*
+                  - states:List*
+                  - states:Send*
+                  Resource:
+                  - "*"
+                - Effect: Allow
+                  Action:
+                  - states:StartExecution
+                  - states:StartSyncExecution
+                  Resource:
+                  - !Sub "arn:${AWS::Partition}:states:${AWS::Region}:${AWS::AccountId}:stateMachine:${Environment}-aws-sandbox-accounts-account-cleaner"
+                - Effect: Allow
+                  Action:
+                  - states:StopExecution
+                  Resource:
+                  - !Sub "arn:${AWS::Partition}:states:${AWS::Region}:${AWS::AccountId}:stateMachine:${Environment}-aws-sandbox-accounts-account-cleaner:*"
   StateMachine:
     Type: AWS::StepFunctions::StateMachine
     Properties:
@@ -55,9 +74,16 @@ Resources:
             FetchDirtyAccounts:
               Type: Task
               Resource: arn:aws:states:::lambda:invoke
-              End: true
+              Next: CleanAccounts
               Parameters:
                 FunctionName: !Sub "${Environment}-aws-sandbox-accounts-account-manager-db-client"
                 Payload:
                   action: fetch_dirty
               OutputPath: $.Payload
+            CleanAccounts:
+              Type: Task
+              Resource: arn:aws:states:::states:startExecution.sync:2
+              End: true
+              Parameters:
+                StateMachineArn: !Sub "arn:${AWS::Partition}:states:${AWS::Region}:${AWS::AccountId}:stateMachine:${Environment}-aws-sandbox-accounts-account-cleaner"
+                Input: $
