--- a/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
+++ b/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
@@ -32,6 +32,13 @@ Resources:
                   - !Sub "arn:${AWS::Partition}:lambda:${AWS::Region}:${AWS::AccountId}:function:${Environment}-aws-sandbox-accounts-account-manager-db-client"
                 - Effect: Allow
                   Action:
+                  - events:PutTargets
+                  - events:PutRule
+                  - events:DescribeRule
+                  Resource:
+                  - !Sub arn:${AWS::Partition}:events:${AWS::Region}:${AWS::AccountId}:rule/StepFunctionsGetEventsForStepFunctionsExecutionRule
+                - Effect: Allow
+                  Action:
                   - states:Describe*
                   - states:Get*
                   - states:List*
