--- a/apps/account-cleaner/buildspec.yml
+++ b/apps/account-cleaner/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   build:
     commands:
-      - cd apps/account-manager
+      - cd apps/account-cleaner
       - curl --location "https://github.com/rebuy-de/aws-nuke/releases/download/v2.25.0/aws-nuke-v2.25.0-linux-arm64.tar.gz" -o aws-nuke.tar.gz
       - tar -xvf aws-nuke.tar.gz
       - echo "running aws-nuke against $ACCOUNT_ID"
