--- a/apps/db-client/Makefile
+++ b/apps/db-client/Makefile
@@ -16,7 +16,7 @@ test: install
 			export AWS_SESSION_TOKEN='testing' && \
 			export AWS_SECURITY_TOKEN='testing' && \
 			export PATH="${HOME}/.poetry/bin:${PATH}" && \
-			poetry run pylint account_manager_db_client \
+			poetry run pylint db_client \
 	)
 
 prod_requirements:
