--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,14 +3,14 @@ version: 0.2
 phases:
   build:
     commands:
-      # account-manager-db-client
-      - cd apps/account-manager-db-client
+      # db-client
+      - cd apps/db-client
       # TODO: run tests (will need to handle installing dev dependencies)
       - pip install -r requirements.prod.txt -t deps
       - mkdir build
       - cp -R deps/* build/
       - cp -R account_manager_db_client/ build/
-      - aws cloudformation package --template-file stacks/sandbox-administrator-account/account-manager-db-client.yml --s3-bucket $ARTIFACTS_BUCKET --s3-prefix artifacts/aws-sandbox-accounts/apps/account-manager-db-client --output-template-file stacks/sandbox-administrator-account/account-manager-db-client.yml
+      - aws cloudformation package --template-file stacks/sandbox-administrator-account/db-client.yml --s3-bucket $ARTIFACTS_BUCKET --s3-prefix artifacts/aws-sandbox-accounts/apps/db-client --output-template-file stacks/sandbox-administrator-account/db-client.yml
       - cd ..
 artifacts:
   files: "**/*"
