--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,7 @@ phases:
       - pip install -r requirements.prod.txt -t deps
       - mkdir build
       - cp -R deps/* build/
-      - cp -R account_manager_db_client/ build/
+      - cp -R db_client/ build/
       - aws cloudformation package --template-file stacks/sandbox-administrator-account/db-client.yml --s3-bucket $ARTIFACTS_BUCKET --s3-prefix artifacts/aws-sandbox-accounts/apps/db-client --output-template-file stacks/sandbox-administrator-account/db-client.yml
       - cd ..
 artifacts:
