Revert "change structure"
This reverts commit e5342b65697a638613243228dd74627fb8a76626.

--- a/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
+++ b/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
@@ -93,5 +93,4 @@ Resources:
               End: true
               Parameters:
                 StateMachineArn: !Sub "arn:${AWS::Partition}:states:${AWS::Region}:${AWS::AccountId}:stateMachine:${Environment}-aws-sandbox-accounts-account-cleaner"
-                Input:
-                  accounts.$: $
+                Input.$: $
