--- a/ci/codepipeline.yml
+++ b/ci/codepipeline.yml
@@ -197,6 +197,22 @@ Resources:
                 RoleArn: !ImportValue ci-infrastructure-codepipeline-base-cloudformation-iam-role
                 TemplatePath: BuiltSource::apps/db-client/stacks/sandbox-administrator-account/db-client.yml
                 TemplateConfiguration: BuiltSource::apps/db-client/stacks/sandbox-administrator-account/parameters/db-client/test.json
+            - ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Version: "1"
+                Provider: CloudFormation
+              InputArtifacts:
+                - Name: BuiltSource
+              RunOrder: 1
+              Name: Auth-Client
+              Configuration:
+                ActionMode: REPLACE_ON_FAILURE
+                Capabilities: CAPABILITY_NAMED_IAM,CAPABILITY_AUTO_EXPAND
+                StackName: test-aws-sandbox-accounts-auth-client
+                RoleArn: !ImportValue ci-infrastructure-codepipeline-base-cloudformation-iam-role
+                TemplatePath: BuiltSource::apps/auth-client/stacks/sandbox-administrator-account/auth-client.yml
+                TemplateConfiguration: BuiltSource::apps/auth-client/stacks/sandbox-administrator-account/parameters/auth-client/test.json
         - Name: Deploy-Common-Resources-To-Live
           Actions:
             - ActionTypeId:
@@ -281,3 +297,19 @@ Resources:
                 RoleArn: !ImportValue ci-infrastructure-codepipeline-base-cloudformation-iam-role
                 TemplatePath: BuiltSource::apps/db-client/stacks/sandbox-administrator-account/db-client.yml
                 TemplateConfiguration: BuiltSource::apps/db-client/stacks/sandbox-administrator-account/parameters/db-client/live.json
+            - ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Version: "1"
+                Provider: CloudFormation
+              InputArtifacts:
+                - Name: BuiltSource
+              RunOrder: 1
+              Name: Auth-Client
+              Configuration:
+                ActionMode: REPLACE_ON_FAILURE
+                Capabilities: CAPABILITY_NAMED_IAM,CAPABILITY_AUTO_EXPAND
+                StackName: live-aws-sandbox-accounts-auth-client
+                RoleArn: !ImportValue ci-infrastructure-codepipeline-base-cloudformation-iam-role
+                TemplatePath: BuiltSource::apps/auth-client/stacks/sandbox-administrator-account/auth-client.yml
+                TemplateConfiguration: BuiltSource::apps/auth-client/stacks/sandbox-administrator-account/parameters/auth-client/live.json
